<resources>
    <string name="app_name">Minhas Compras - Esucri</string>
    <string name="estabelecimento">Estabelecimento</string>
    <string name="produto">Produto</string>
    <string name="comprar">Comprar</string>
    <string name="saudacao">Olá, Lucas Boeing Scarduelli</string>
    <string name="codigo">Código</string>
    <string name="referencia">Referência</string>
    <string name="descricao">Descrição</string>
    <string name="unidade_de_medida">Unidade de Medida</string>
    <string name="preco">Preço</string>
    <string name="quantidade_em_estoque">Quantidade em Estoque</string>
    <string name="salvar">Salvar</string>
    <string name="novo">Novo</string>
    <string name="excluir">Excluir</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="tipo">Tipo</string>
    <string name="telefone">Telefone</string>
<<<<<<< HEAD
    <string name="titulo_confirmacao_exclusao">Confirmação de Exclusão</string>
    <string name="mensagem_confirmacao_exclusao">Deseja realmente excluir?</string>
    <string name="botao_confirmar">Confirmar</string>

    <string name="mensagem_salvo_sucesso">Salvo com sucesso!</string>

    <string-array name="unidades_medida">
        <item>Kg</item>
        <item>Lt</item>
        <item>Un</item>
        <item>Fardo</item>
        <item>Pc</item>
        <item>Mt</item>
    </string-array>

=======
>>>>>>> 655521d344dc2a25a4238ef8354148c075a1adbe
</resources>
