<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.esucri.minhascompras.EstabelecimentoActivity">

    <TextView
        android:id="@+id/label_codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        android:text="@string/codigo" />

    <EditText
        android:id="@+id/edit_codigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/label_codigo"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/label_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_codigo"
        android:text="@string/descricao" />

    <EditText
        android:id="@+id/edit_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/label_descricao"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/label_tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_descricao"
        android:text="@string/tipo" />

    <EditText
        android:id="@+id/edit_tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/label_tipo"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/label_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_tipo"
        android:text="@string/telefone" />

    <EditText
        android:id="@+id/edit_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/label_telefone"
        android:ems="10"
        android:inputType="phone" />

    <Button
        android:id="@+id/botao_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/salvar" />

    <Button
        android:id="@+id/botao_novo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/botao_salvar"
        android:layout_toEndOf="@+id/botao_salvar"
        android:text="@string/novo" />

    <Button
        android:id="@+id/botao_excluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/botao_novo"
        android:text="@string/excluir" />

    <Button
        android:id="@+id/botao_pesquisar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/pesquisar"
        android:layout_toEndOf="@+id/botao_excluir" />

</RelativeLayout>
