<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context="br.com.esucri.minhascompras.MainActivity">    <TextView        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/saudacao"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintLeft_toLeftOf="parent"        app:layout_constraintRight_toRightOf="parent"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintVertical_bias="0.141"        android:layout_alignParentTop="true"        android:layout_centerHorizontal="true"        android:layout_marginTop="31dp" />    <Button        android:id="@+id/botao_compra"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_alignParentBottom="true"        android:layout_centerHorizontal="true"        android:layout_marginBottom="15dp"        android:layout_marginRight="8dp"        android:layout_marginLeft="8dp"        android:text="@string/comprar"        android:onClick="abrirCompra"/>    <Button        android:id="@+id/botao_produto"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/produto"        android:layout_above="@+id/botao_compra"        android:layout_alignStart="@+id/botao_compra"        android:onClick="abrirProduto"/>    <Button        android:id="@+id/botao_estabelecimento"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_above="@+id/botao_compra"        android:layout_alignEnd="@+id/botao_compra"        android:text="@string/estabelecimento"        android:onClick="abrirEstabelecimento"/></RelativeLayout>